# ICL_controller

./: .gitignore  ICL_Inertia.m  ICL_Mass.asv  ICL_Mass.m  ICL_controller.m  ICL_mass.asv  ICL_mass.m  README.md  controller.asv  controller.m  distribute_force.m  feedforward_force_ctrl.asv  feedforward_force_ctrl.m  feedforward_moment_ctrl.m  feedward_moment_ctrl.m  force_to_uav.m  gazebo_dynamics.m  getPose.m  initailize.m  integral_concurrent_learning.m  main.asv  main.m  optimization.m  payload_dynamics.m  payload_trajectory.m  plotgraph.m  quad_dynamics.m  rigidbody_dynamics.m  ros_test.m  simulation.m  three_force_optim.m  trajectory.m  untitled.fig  untitled12.m  untitled13.m  untitled14.m  untitled15.m  untitled19.m  untitled2.m  untitled20.m  (+2 more)
Easy_ICL_example/: ICL_easy.m  README.md
Experiment/: 0627 - Even_CL.csv  0627 - Even_EMK.csv  0627 - Optimal_EMK.csv  Esimtation_animation.m  Even_EMK.m  Even_estimation.m  Hover_0.6_2.7.csv  Not_optimal_2.6_0.06 - good_eight_not_optimal.csv  Optimal_CL.m  Power_animation.m  Trajectory_animation.m  eight_alnumimum_not.csv  estimation_animation.m  even.m  even_CL.m  even_tracking.m  hover.m  hover_CL.csv  hover_bad.csv  hover_final.csv  optimized.m  power.csv  power_animation.m  power_optimal.avi  trajectory_animation.m
Experiment/data/: 0627 - Optimal_CL.csv  0707 - EMK.csv  0707 - Estimation.csv  0707 - Optimize.csv  ESP32_data - esp32_battery (2).csv
Gazebo_simulation/: force_to_uav.m  four_force_optimization.m  gazebo_controller.m  gazebo_distributed.m  gazebo_distributor.m  gazebo_init.m  gazebo_payload.m  gazebo_plotgraph.m  gazebo_trajectory.m  gazebo_uav.m  getPose.m  integral_concurrent_learning.m  main.m  resultant_to_uav.m  ros_test.m  safe_direction.m  stop.m  three_force_optimization_update.m
Gazebo_simulation/mav_comm/matlab_msg_gen_ros1/glnxa64/devel/: local_setup.sh  setup.sh
Gazebo_simulation/mav_comm/matlab_msg_gen_ros1/glnxa64/src/: CMakeLists.txt
Gazebo_simulation/mav_comm/matlab_msg_gen_ros1/glnxa64/src/mav_msgs/: CMakeLists.txt  packageInfo.mat
Gazebo_simulation/mav_comm/matlab_msg_gen_ros1/glnxa64/src/mav_planning_msgs/: CMakeLists.txt  package.xml
Gimbal_gazebo/: force_to_uav.m  gazebo_init.m  getPose.m  real_optimization.m
Gimbal_gazebo/mav_comm/matlab_msg_gen_ros1/glnxa64/devel/: .catkin
Gimbal_gazebo/mav_comm/matlab_msg_gen_ros1/glnxa64/install/: local_setup.sh
Gimbal_gazebo/mav_comm/matlab_msg_gen_ros1/glnxa64/src/mav_msgs/: Md5checksum.mat
Gimbal_gazebo/mav_comm/matlab_msg_gen_ros1/glnxa64/src/mav_planning_msgs/: Md5checksum.mat  packageInfo.mat
Matlab_simulation/: README.md  cal_allocation_matrix.m  controller.m  distribute_force.m  distribution.m  feedforward_force_ctrl.m  feedforward_moment_ctrl.m  integral_concurrent_learning.m  main.m  multirotor_dynamics.m  optimization.m  payload_dynamics.m  payload_trajectory.m  plotgraph.m  three_force.m  traj_generator.m  trajectory.m  vec_cross.m  vec_dot.m
Rigid_gazebo/: bound_control.m  cal_allocation_matrix.m  controller.m  distribution.m  distribution_inv.m  draw.m  draw_up.m  experiment_optimization.m  feedforward_force_ctrl.m  feedforward_moment_ctrl.m  four_optim.m  gazebo_uav.m  getPose.m  hat_map.m  integral_concurrent_learning.m  main.m  mass.avi  multirotor_dynamics.m  t_temp.mat  traj.mat  trajectory.m  untitled.m  untitled2.m  untitled5.m  vee_map.m  video_generator.m  wrench_to_ros.m
Rigid_gazebo/data/: both_angular_error.txt  both_energy.txt  both_position_error.txt  both_rotation_error.txt  both_velocity_error.txt  controllability_angular_error.txt  controllability_position_error.txt  controllability_rotation_error.txt  controllability_velocity_error.txt  controllabilityangular_error.txt  controllabilityposition_error.txt  controllabilityrotation_error.txt  controllabilityvelocity_error.txt  energy_angular_error.txt  energy_energy.txt  energy_position_error.txt  energy_rotation_error.txt  energy_velocity_error.txt  normal_angular_error.txt  normal_energy.txt  normal_position_error.txt  normal_rotation_error.txt  normal_velocity_error.txt  optimal_angular_error.txt  optimal_position_error.txt  optimal_rotation_error.txt  optimal_velocity_error.txt  without.mat
Rigid_gazebo/data/video/: emk.mat
mav_comm/matlab_msg_gen_ros1/glnxa64/devel/: .catkin  .rosinstall  setup.sh
mav_comm/matlab_msg_gen_ros1/glnxa64/devel/include/mav_msgs/: RollPitchYawrateThrust.h  TorqueThrust.h
mav_comm/matlab_msg_gen_ros1/glnxa64/install/: setup.sh
mav_comm/matlab_msg_gen_ros1/glnxa64/src/: CMakeLists.txt
mav_comm/matlab_msg_gen_ros1/glnxa64/src/mav_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
mav_comm/matlab_msg_gen_ros1/glnxa64/src/mav_planning_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
mav_comm/matlab_msg_gen_ros1/glnxa64/src/mav_planning_msgs/include/mav_planning_msgs/: visibility_control.h
mav_comm/matlab_msg_gen_ros1/glnxa64/src/mav_planning_msgs/m/+ros/+internal/+ros/+custommessages/+mav_planning_msgs/: changeNameServiceRequest.m  plannerServiceResponse.m  polygonServiceRequest.m  polygonServiceResponse.m  polygonWithHoles.m  polynomialSegment.m  polynomialSegment4D.m  polynomialTrajectory.m
mav_comm/matlab_msg_gen_ros1/glnxa64/src/mav_planning_msgs/m/+ros/+msggen/+mav_planning_msgs/: ChangeNameServiceResponse.m  PlannerServiceResponse.m  PointCloudWithPose.m
mav_comm/matlab_msg_gen_ros1/glnxa64/src/mav_planning_msgs/src/: mav_planning_msgs_ChangeNameService_service.cpp  mav_planning_msgs_PlannerService_service.cpp  mav_planning_msgs_PointCloudWithPose_message.cpp  mav_planning_msgs_PolynomialSegment_message.cpp  mav_planning_msgs_PolynomialTrajectory4D_message.cpp  mav_planning_msgs_PolynomialTrajectory_message.cpp
mav_comm/matlab_msg_gen_ros1/glnxa64/src/mav_state_machine_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
mav_comm/matlab_msg_gen_ros1/glnxa64/src/mav_system_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
ros_msgs/msg/: RollPitchYawrateThrust.msg
tools/: calculate_err.m  draw_speed.m  hat_map.m  vee_map.m
(+161 files in other folders)
